<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".ViewListActivity">

    <ListView
            android:id="@+id/viewListView"
            android:layout_width="match_parent"
            android:layout_height="421dp"/>
    <Button
            android:text="@string/addButtonViewList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addItemButton" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/viewListView"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/buttonColor" android:textColor="@color/box"/>

</android.support.constraint.ConstraintLayout>