...
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/emptyString"
            android:ems="10"
            android:id="@+id/newListName"
            android:singleLine="true" android:gravity="center_vertical|center_horizontal|center"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintTop_toBottomOf="@+id/newListViewTitle" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/submitNewList" android:layout_marginTop="32dp"/>
...
